refactored CSS structure in HTML by separating styles into dedicated files for clarity

--- a/laravel-app/resources/css/app.css
+++ b/laravel-app/resources/css/app.css
@@ -1,3 +1,9 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'pages/welcome.css';
+@import 'components/basic.css';
+@import 'components/body.css';
+@import 'components/button.css';
+@import 'components/navbar.css';
+
+/*@tailwind base;*/
+/*@tailwind components;*/
+/*@tailwind utilities;*/
