create route, view and css for the register page

--- a/laravel-app/resources/css/app.css
+++ b/laravel-app/resources/css/app.css
@@ -3,6 +3,7 @@
 @import 'components/body.css';
 @import 'components/button.css';
 @import 'components/navbar.css';
+@import 'components/form.css';
 
 /*@tailwind base;*/
 /*@tailwind components;*/
