--- a/laravel-app/resources/css/components/form.css
+++ b/laravel-app/resources/css/components/form.css
@@ -34,3 +34,9 @@ input {
     color: #555;
     margin-bottom: 20px;
 }
+
+.text-danger {
+    color: red;
+    font-size: 16px;
+    font-weight: 900;
+}
