--- a/laravel-app/resources/css/components/main.css
+++ b/laravel-app/resources/css/components/main.css
@@ -7,7 +7,6 @@ main {
     border-left: var(--BORDERS);
     border-right: var(--BORDERS);
     box-shadow: 0 0 10px var(--BORDER-COLOR);
-    display: flex;
 }
 
 /* WELCOME PAGE */
@@ -33,7 +32,7 @@ main {
 
 @keyframes grow {
     0% {
-        transform: scale(0.6);
+        transform: scale(0.2);
     }
     50% {
         transform: scale(1.3) rotate(-3deg);
@@ -48,12 +47,35 @@ main {
     text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.5);
 }
 
-/* REGISTRATION PAGE */
+.heart {
+    display: inline-block;
+    font-size: 1.2rem;
+    animation: pulse 1.2s infinite ease-in-out;
+}
 
-.main__article {
+@keyframes pulse {
+    0%, 70% {
+        transform: scale(1);
+    }
+    30% {
+        transform: scale(1.2);
+        color: red;
+    }
+    40% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.2);
+        color: red;
+    }
+}
+
+/* REGISTRATION/LOGIN PAGE */
+
+.welcome__article {
     border: var(--BORDERS);
     background-color: rgba(255, 255, 255, 0.6);
-    padding: 3rem;
+    padding: 2rem;
     margin: 0 20%;
     box-shadow: 0 0 10px var(--BORDER-COLOR);
     border-radius: var(--BORDER-RADIUS);
@@ -93,3 +115,92 @@ main {
     background-color: rgba(255, 255, 255, 0.6);
     font-weight: bolder;
 }
+
+/* HOME PAGE */
+
+ .home {
+     overflow-y: auto;
+     display: grid;
+     grid-template-rows: 1fr 3fr;
+ }
+
+ .home__article {
+     margin: 1.5rem;
+ }
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    gap: 0.4rem;
+    justify-content: center;
+    align-items: center;
+    padding: var(--PADDING);
+    overflow: hidden;
+    background-color: rgba(130, 130, 130, 0.3);
+    border-radius: var(--BORDER-RADIUS);
+    min-height: 60px;
+}
+
+.quote__h2 {
+    font-size: clamp(0.4rem , 2vw, 2rem);
+}
+
+.quote__h2::before {
+    content: open-quote;
+}
+
+.quote__h2::after {
+    content: close-quote;
+}
+
+.quote__p {
+    transform: translateX(30%);
+    font-size: clamp(0.4rem , 1.4vw, 1.2rem);
+}
+
+.quote__p::before {
+    content: '- ';
+}
+
+.recommend {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin-top: 0;
+    margin-bottom: 100px;
+}
+
+.recommend__h1 {
+    font-size: clamp(0.2rem , 3vw, 2rem);
+    text-transform: uppercase;
+    text-decoration: underline;
+    font-style: italic;
+    text-align: center;
+    margin-bottom: 2rem;
+
+}
+
+.recommend__h2 {
+    font-size: clamp(0.2rem , 2vw, 1.4rem);
+}
+
+.recommend__h2::before {
+    content: '** ';
+}
+
+.recommend__section {
+    display: flex;
+    padding: var(--PADDING) 10%;
+    align-items: center;
+    justify-content: center;
+}
+
+.recommend__a {
+    font-size: clamp(0.2rem , 2vw, 1.4rem);
+    border: var(--BORDERS);
+    box-shadow: 0 0 10px var(--BORDER-COLOR);
+    padding: 0.5rem;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+
