--- a/laravel-app/resources/css/components/main.css
+++ b/laravel-app/resources/css/components/main.css
@@ -49,7 +49,7 @@ main {
 
 .heart {
     display: inline-block;
-    font-size: 1.2rem;
+    font-size: 0.8em;
     animation: pulse 1.2s infinite ease-in-out;
 }
 
