create a database base and add search and filter options

--- a/laravel-app/resources/css/components/main.css
+++ b/laravel-app/resources/css/components/main.css
@@ -7,6 +7,7 @@ main {
     border-left: var(--BORDERS);
     border-right: var(--BORDERS);
     box-shadow: 0 0 10px var(--BORDER-COLOR);
+    overflow-y: auto;
 }
 
 /* WELCOME PAGE */
