--- a/laravel-app/resources/css/components/main.css
+++ b/laravel-app/resources/css/components/main.css
@@ -416,4 +416,99 @@ main {
     opacity: 0.5;
 }
 
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+}
 
+.modal__content {
+    border: var(--BORDERS);
+    border-radius: var(--BORDER-RADIUS);
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 0 0 4px var(--BORDER-COLOR);
+    padding: 20px;
+    width: 80%;
+    height: 90%;
+    max-height: 600px;
+    max-width: 1000px;
+    position: relative;
+    overflow-y: scroll;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 1rem;
+}
+
+.close-button:hover {
+    text-decoration: none;
+}
+
+.modal__card {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1.5fr 2.5fr;
+    grid-template-rows: 1fr 5fr 1fr;
+    gap: 10px;
+}
+
+.modal__h1 {
+    grid-column: 1 / -1;
+    grid-row: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+.modal__action {
+    grid-column: 1 / -1;
+    grid-row: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal__action__button:hover {
+    text-decoration: none;
+}
+
+.modal__img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal__img img{
+    width: auto;
+    height: auto;
+}
+
+.modal__data {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    grid-column: 2;
+    grid-row: 2;
+    padding-left: 20px;
+}
+
+.modal__data__type {
+    font-weight: bold;
+    font-size: 110%;
+}
