--- a/laravel-app/resources/css/components/main.css
+++ b/laravel-app/resources/css/components/main.css
@@ -461,7 +461,7 @@ main {
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: 1.5fr 2.5fr;
+    grid-template-columns: 1fr 2.5fr;
     grid-template-rows: 1fr 5fr 1fr;
     gap: 10px;
 }
@@ -502,10 +502,13 @@ main {
 .modal__data {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     grid-column: 2;
     grid-row: 2;
     padding-left: 20px;
+    overflow-y: auto;
+    max-height: 100%;
 }
 
 .modal__data__type {
