create add to my list function

--- a/laravel-app/resources/css/components/main.css
+++ b/laravel-app/resources/css/components/main.css
@@ -381,7 +381,7 @@ main {
     gap: 5px;
 }
 
-.item__action__button:hover {
+.item__action__button:hover, .detailsButton:hover {
     text-decoration: none;
 }
 
@@ -486,6 +486,15 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 30px;
+}
+
+.modal__action__button {
+    border: var(--BORDERS);
+    box-shadow: 0 0 10px var(--BORDER-COLOR);
+    padding: 0.5rem;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: var(--BORDER-RADIUS);
 }
 
 .modal__action__button:hover {
@@ -495,7 +504,7 @@ main {
 .modal__img {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .modal__img img{
@@ -553,6 +562,7 @@ main {
     box-shadow: 0 0 10px var(--BORDER-COLOR);
     padding: 0.5rem;
     background-color: rgba(255, 255, 255, 0.5);
+    border-radius: var(--BORDER-RADIUS);
 }
 
 .show__season__button:hover, .show__series__button:hover {
