-refactor add to my list functions (handle my list, favorite and watchlist buttons with the same functions) -implement favorite and watchlist buttons on the item's card

--- a/laravel-app/resources/css/components/main.css
+++ b/laravel-app/resources/css/components/main.css
@@ -570,17 +570,17 @@ main {
 }
 
 .green {
-    background-image: linear-gradient(rgba(0, 128, 0, 0.3), rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6));
+    background-image: linear-gradient(rgba(0, 128, 0, 0.3), rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6));
 }
 
 .green__red{
-    background-image: linear-gradient(rgba(0, 128, 0, 0.3), rgba(255, 0, 0, 0.3), rgba(255, 255, 255, 0.6));
+    background-image: linear-gradient(rgba(0, 128, 0, 0.3), rgba(255, 255, 255, 0.6), rgba(255, 0, 0, 0.2), rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6));
 }
 
 .green__blue{
-    background-image: linear-gradient(rgba(0, 128, 0, 0.3), rgba(255, 255, 255, 0.6), rgba(0, 0, 255, 0.3));
+    background-image: linear-gradient(rgba(0, 128, 0, 0.3), rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6), rgba(0, 0, 255, 0.2));
 }
 
 .green__red__blue {
-    background-image: linear-gradient(rgba(0, 128, 0, 0.3), rgba(255, 0, 0, 0.3), rgba(0, 0, 255, 0.3));
+    background-image: linear-gradient(rgba(0, 128, 0, 0.3), rgba(255, 255, 255, 0.6), rgba(255, 0, 0, 0.2), rgba(255, 255, 255, 0.6), rgba(0, 0, 255, 0.2));
 }
