create the skeleton of the collection page

--- a/laravel-app/resources/css/components/main.css
+++ b/laravel-app/resources/css/components/main.css
@@ -443,7 +443,6 @@ main {
     max-height: 600px;
     max-width: 1000px;
     position: relative;
-    overflow-y: scroll;
     display: flex;
     justify-content: center;
     align-content: center;
@@ -506,8 +505,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    padding: 10px;
-    padding-left: 20px;
+    padding: 10px 10px 10px 20px;
 }
 
 .modal__img img{
