--- a/laravel-app/resources/css/components/main.css
+++ b/laravel-app/resources/css/components/main.css
@@ -202,6 +202,7 @@ main {
     box-shadow: 0 0 10px var(--BORDER-COLOR);
     padding: 0.5rem;
     background-color: rgba(255, 255, 255, 0.5);
+    border-radius: var(--BORDER-RADIUS);
 }
 
 /* DATABASE PAGE */
